# diagonal-outdoor-amr

./: .gitignore  README.md  frames_2026-06-22_12.11.27.gv
src/outdoor_amr/: CMakeLists.txt  README.md  package.xml
src/outdoor_amr/config/: bridge_gazebo.yaml  ekf.yaml  gps_wpf_demo.mvc  laser_filter.yaml  my_controllers.yaml  nav2_no_map_params.yaml
src/outdoor_amr/description/: gps.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/outdoor_amr/launch/: dual_ekf_navsat.launch.py  gps_waypoint_follower.launch.py  launch_sim.launch.py  launch_sim_outdoor.launch.py  mapviz.launch.py
src/outdoor_amr/meshes/: base.stl  left_wheel.stl  rplidar.stl
src/outdoor_amr/src/: twist_to_stamped.cpp
src/outdoor_amr/worlds/: industrial-warehouse.sdf  tb3_sonoma_raceway.sdf  tb3_sonoma_raceway.sdf.xacro
